# ipa2x

./: README.md  flake.nix
IPA2XWarning/: settings.gradle
IPA2XWarning/app/: build.gradle
IPA2XWarning/app/src/androidTest/java/cz/cvut/fel/marunluk/ipa2xwarning/: ExampleInstrumentedTest.kt
IPA2XWarning/app/src/idl/: CarInfo.idl  CrossingInfo.idl
IPA2XWarning/app/src/main/: AndroidManifest.xml
IPA2XWarning/app/src/main/cpp/: CMakeLists.txt
IPA2XWarning/app/src/main/cpp/carinfo/: CarInfo.cxx  CarInfo.h  CarInfoPubSubTypes.cxx  CarInfoPubSubTypes.h  CarInfoPublisher.cpp  CarInfoSubscriber.cpp  Gps.cxx  Gps.h  GpsPubSubTypes.h
IPA2XWarning/app/src/main/cpp/crossing/: CrossingInfo.cxx  CrossingInfo.h  CrossingInfoPubSubTypes.h  CrossingPublisher.cpp  CrossingSubscriber.cpp  Gps.cxx  Gps.h  GpsPubSubTypes.h
IPA2XWarning/app/src/main/java/cz/cvut/fel/marunluk/ipa2xwarning/: CrossingHandler.kt  InfoHandler.kt  MainActivity.kt
IPA2XWarning/app/src/main/res/drawable/: avd_anim.xml  avd_anim_.xml  blue.xml  blue_anim.xml  ic_blue_sign.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_red_sign.xml  red.xml  red_anim.xml  test2_anim.xml  test_anim.xml
IPA2XWarning/app/src/main/res/layout/: activity_main.xml
IPA2XWarning/app/src/main/res/layout-land/: activity_main.xml
IPA2XWarning/app/src/main/res/values/: strings.xml  themes.xml
IPA2XWarning/app/src/main/res/values-night/: themes.xml
IPA2XWarning/app/src/test/java/cz/cvut/fel/marunluk/ipa2xwarning/: ExampleUnitTest.kt
IPA2XWarning/gradle/wrapper/: gradle-wrapper.properties
idl/: CarInfo.idl  CrossingInfo.idl  Gps.idl  Makefile
ipa2x_car_connect/: CMakeLists.txt  package.xml
ipa2x_car_connect/idl/: CrossingInfo.cxx  CrossingInfo.h
ipa2x_car_connect/src/: CrossingInfoPublisher.hpp  ipa2x_car_connect.cpp
ipa2x_connect/: CMakeLists.txt  package.xml
ipa2x_connect/idl/: CrossingInfoPubSubTypes.cxx
ipa2x_connect/src/: translator.cpp
nix/: fastdds.nix
ros-pkg/: CMakeLists.txt  README.md
ros-pkg/idl/: CMakeLists.txt  CarInfo.cxx  CarInfo.h  CarInfoPubSubTypes.h  Gps.h  GpsPubSubTypes.h
ros-pkg/src/: common.hpp  ipa2x_car_connect.cpp  rover-sim.cpp
warning_cpp/: CMakeLists.txt
warning_cpp/CarInfo/: CMakeLists.txt
warning_cpp/CarInfo/src/: CarInfoPublisher.cpp  CarInfoSubscriber.cpp
warning_cpp/CrossingInfo/: CMakeLists.txt
warning_cpp/CrossingInfo/src/: CrossingInfo.cxx  CrossingPublisher.cpp  CrossingSubscriber.cpp  Gps.cxx
warning_cpp/CrossingInfoServer/: CMakeLists.txt
warning_cpp/CrossingInfoServer/src/: CrossingInfo.cxx  CrossingInfo.h  CrossingPublisher.cpp  CrossingServer.cpp  CrossingSubscriber.cpp
warning_cpp/idl/: CarInfo.cxx  CarInfo.h  CarInfoCdrAux.hpp  CarInfoCdrAux.ipp  CarInfoPubSubTypes.cxx  CarInfoPubSubTypes.h  CrossingInfo.cxx  CrossingInfoCdrAux.hpp  CrossingInfoCdrAux.ipp  CrossingInfoPubSubTypes.cxx  CrossingInfoPubSubTypes.h  Gps.cxx  Gps.h  GpsCdrAux.hpp  GpsCdrAux.ipp  GpsPubSubTypes.cxx
warning_cpp/src/: CMakeLists.txt  CarInfoPublisher.cpp  CarInfoSubscriber.cpp  Common.cpp  CrossPub.cpp  CrossingInfoPublisher.hpp  CrossingPublisher.cpp  CrossingSubscriber.cpp  DiscoveryServer.cpp  common.hpp
warning_cpp/src/idl/: Gps.idl
warning_cpp/src/include/: CarInfoPubSubTypes.cxx  CrossingInfoPubSubTypes.h  Gps.cxx  GpsPubSubTypes.cxx  common.hpp  parse.hpp
